# rdp_holiday

./: README.md  pyproject.toml  rdp_holiday.py  setup.py
rdp_holiday/: rdp_holiday.py
